# anibase-fastapi

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: fcae052ff99a_add_genres_and_anime_genres.py
anibase/: main.py
anibase/application/: enums.py
anibase/application/dto/: __init__.py  anime.py  genre.py  user.py  user_anime.py
anibase/application/services/: __init__.py  anime_service.py  auth_service.py  user_anime_service.py
anibase/infrastructure/: config.py
anibase/infrastructure/auth/: jwt_handler.py  password_hasher.py
anibase/infrastructure/db/: models.py  session.py
anibase/infrastructure/db/repositories/: __init__.py  anime_repository.py  genre_repository.py  role_repository.py  user_anime_repository.py  user_repository.py
anibase/presentation/: dependencies.py
anibase/presentation/routers/: __init__.py  admin.py  auth.py  user.py
anibase/presentation/schemas/: anime.py  auth.py  user.py
tests/: conftest.py  test_admin.py  test_auth.py
tests/fixtures/: anime.py  client.py  database.py  genres.py  repositories.py  roles.py  services.py
tests/test_application/test_services/: test_anime_service.py  test_user_anime_service.py
tests/test_infrastructure/: test_db.py  test_repositories.py
tests/test_infrastructure/test_repositories/: test_anime_repository.py  test_anime_user_repository.py  test_genre_repository.py  test_user_repository.py
tests/test_services/: test_auth_service.py
